client/src/components/assets/assets.css
.assets .header-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    height: 100%;
}

.assets .list.small .list-item {
    border: none;
    margin: 0;
}

.assets .line-item {
    border: none;
    padding: 0;
    padding-left: 6px;
}

.assets .line-item > div {
    display: inline-block;
    vertical-align: middle;
}

.assets .line-item img {
    height: unset;
    max-height: 100%;
    max-width: 100%;
}

.assets .list-item > div,
.assets .list-item > div > div {
    height: 100%;
}

.assets .list-item div[draggable] {
    height: 100%;
}

.assets .rcs-custom-scroll {
    width: 75%;
    display: inline-block;
}

